# game-of-life

./: CMakeLists.txt  Cell.cpp  GameBoard.cpp  Grid.cpp  README.md  Tile.cpp  build.sh  main.cpp  run.sh
include/: Cell.h  GameBoard.h  Grid.h  Tile.h
